--- a/index.html
+++ b/index.html
@@ -1,38 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Title</title>
+  <title>Bookmark</title>
 </head>
+
 <body>
 
-<!-- HEADER PART  -->
-<section id="header-site"></section>
-<header>
+  <!-- HEADER PART  -->
+  <header class="site-header">
+    <div class="container">
+      <div class="row middle between">
+        <div class="header-logo">
+          <a href="/"><img src="imgs/logo.svg" alt="logo" width="149" height="25"></a>
+        </div>
 
-</header>
-<!-- HEADER PART END -->
+        <nav>
+          <ul class="header-nav-list row between middle">
+            <li class="header-nav-item"><a class="header-nav-link" href="#">FEATURES</a></li>
+            <li class="header-nav-item"><a class="header-nav-link" href="#">PRICING</a></li>
+            <li class="header-nav-item"><a class="header-nav-link" href="#">CONTACT</a></li>
+            <li class="header-nav-item"><button class="header-btn" type="button">LOGIN</button></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <!-- HEADER PART END -->
 
-<!-- MAIN PART  -->
+  <!-- HERO PART  -->
 
-<main>
+  <section class="hero-part">
+    <div class="container">
+      <div class="hero-box row">
+        <div class="hero-main">
+          <h2 class="hero-title">A Simple Bookmark Manager</h2>
+          <p class="hero-text">A clean and simple interface to organize your favourite websites. Open a new browser tab
+            and see your sites load instantly. Try it for free.</p>
+          <div class="row">
+            <button class="hero-btn" type="button">
+              Get it on Chrome
+            </button>
+            <button class="hero-btn2" type="button">
+              Get it on Firefox
+            </button>
+          </div>
+        </div>
+        <div class="hero-img">
+          <img src="https://picsum.photos/id/870/578/385/" alt="hero-img" width="578" height="385">
+        </div>
+      </div>
+    </div>
+  </section>
 
-</main>
+  <!-- MAIN PART  -->
 
-<!-- MAIN PART END -->
+  <main>
 
-<!-- FOOTER PART -->
+    <!-- Features PART -->
 
-<footer>
+    <section class="main-features">
+      <div class="container">
 
-</footer>
+        <div class="main-center">
+          <h2 class="main-title">Features</h2>
+          <p class="main-text">Our aim is to make it quick and easy for you to access your favourite websites. Your
+            bookmarks sync between your devices so you can access them on the go.</p>
 
-<!-- FOOTER PART END -->
+          <div class="main-features-box row">
+            <h3 class="main-features-subtitle activ"><a class="main-features-link" href="#"> Simple Bookmarking </a>
+            </h3>
+            <h3 class="main-features-subtitle"><a class="main-features-link" href="#"> Speedy Searching </a></h3>
+            <h3 class="main-features-subtitle"><a class="main-features-link" href="#"> Easy Sharing </a></h3>
+          </div>
+        </div>
+        <div class="features-box row middle between">
+          <div class="features-img">
+            <img src="imgs/features-img.svg" alt="features-img" width="536" height="346">
+          </div>
+          <div class="features-main">
+            <h3 class="features-title">Bookmark in one click</h3>
+            <p class="features-text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives
+              you complete control over how you manage your favourite sites.</p>
+
+            <button class="features-btn" type="button">more info</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- DOWNLOAD PART  -->
+
+    <section class="main-download">
+      <div class="container">
+        <div class="main-center">
+
+          <h2 class="main-title">Download the extension</h2>
+          <p class="main-text">We've got more browsers in the pipeline. Please do let us know if you've got a favourite
+            you'd like us to prioritize.</p>
+        </div>
+        <ul class="main-download-list row center">
+
+          <li class="main-download-item">
+            <h3 class="main-download-subtitle">Add to Chrome</h3>
+            <p class="main-download-desc">Minimum version 62</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+
+          <li class="main-download-item box2">
+            <h3 class="main-download-subtitle">Add to Firefox</h3>
+            <p class="main-download-desc">Minimum version 55</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+
+          <li class="main-download-item box3">
+            <h3 class="main-download-subtitle">Add to Opera</h3>
+            <p class="main-download-desc">Minimum version 46</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+
+          <li class="main-download-item">
+            <h3 class="main-download-subtitle">Add to Chrome</h3>
+            <p class="main-download-desc">Minimum version 62</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+
+          <li class="main-download-item box2">
+            <h3 class="main-download-subtitle">Add to Chrome</h3>
+            <p class="main-download-desc">Minimum version 62</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+
+          <li class="main-download-item box3">
+            <h3 class="main-download-subtitle">Add to Chrome</h3>
+            <p class="main-download-desc">Minimum version 62</p>
+            <button class="main-download-btn" type="button">Add & Install extension</button>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+
+    <!-- ASKED PART  -->
+
+    <section class="main-asked">
+      <div class="container">
+        <div class="main-center">
+          <h2 class="main-title">Frequently Asked Questions</h2>
+          <p class="main-text">Here are some of our FAQs. If you have any other questions you'd like answered please
+            feel free to email us.</p>
+
+          <ul class="asked-list">
+            <li class="asked-item row between">
+              <p>What is Bookmark? </p> <i class='bx bx-chevron-down'></i>
+            </li>
+            <li class="asked-item row between">
+              <p>How can I request a new browser? </p><i class='bx bx-chevron-down'></i>
+              <div class="asked-drop">
+                <p class="asked-desc">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                  ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris
+                  augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis
+                  ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+              </div>
+            </li>
+            <li class="asked-item row between">
+              <p>Is there a mobile app? </p><i class='bx bx-chevron-down'></i>
+            </li>
+            <li class="asked-item row between">
+              <p>What about other Chromium browsers? </p><i class='bx bx-chevron-down'></i>
+            </li>
+          </ul>
+          <button class="asked-btn">more info</button>
+        </div>
+
+
+      </div>
+    </section>
+
+    <!-- JOINED PART  -->
+
+    <section class="main-joined">
+      <div class="container">
+        <div class="main-center">
+          <p class="joined-text">35,000+ ALREADY JOINED</p>
+          <h2 class="joined-title">Stay up-to-date with what
+            we're doing</h2>
+          <form class="row" action="https://echo.htmlacademy.ru">
+            <label for="email">
+              <input class="input-email" type="email" name="email" id="email" placeholder="Enter your email address"
+                required>
+            </label>
+            <button class="joined-btn" type="submit">Contact Us</button>
+          </form>
+
+        </div>
+      </div>
+    </section>
+
+
+  </main>
+
+  <!-- MAIN PART END -->
+
+  <!-- FOOTER PART -->
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row middle">
+        <div class="footer-logo">
+          <a href="/"><img src="imgs/footer-logo.svg" alt="footer-logo" width="148" height="25"></a>
+        </div>
+        <nav>
+          <ul class="footer-nav-list row between middle">
+            <li class="footer-nav-item"><a class="footer-nav-link" href="#">FEATURES</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="#">PRICING</a></li>
+            <li class="footer-nav-item"><a class="footer-nav-link" href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+        <ul class="socical-list row middle">
+          <li class="socical-item"><a href="#" target="_blank"><i class='bx bxl-facebook-square icon-socical'></i></a>
+          </li>
+          <li class="socical-item"><a href="#" target="_blank"><i class='bx bxl-twitter icon-socical'></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+  <!-- FOOTER PART END -->
 
 </body>
+
 </html>
